--- a/_talks/2022-07-18-IISA.md
+++ b/_talks/2022-07-18-IISA.md
@@ -8,7 +8,7 @@ date: 2022-07-18
 location: "Ionian University, Corfu, Greece"
 ---
 <hr>
-My first presentation of a research presentation, what a great experience!
+My first presentation of a research publication, what a great experience!
 
 
 <img style="width:380px" src="https://adreaskar.github.io/images/iisa_1.jpg"/>
