--- a/_talks/2022-07-18-IISA.md
+++ b/_talks/2022-07-18-IISA.md
@@ -8,7 +8,9 @@ date: 2022-07-18
 location: "Ionian University, Corfu, Greece"
 ---
 <hr>
-My first presentation of a research publication, what a great experience!
+My first presentation of a research publication, really excited!
+
+I presented the Dimensioning Workbench tool, which is a tool that I co-developed along with my research coleagues for the DIASTEMA research project. The tool is used to dimension the resources of a cloud application based on its requirements and the available resources of the cloud provider, through a user friendly interface.
 
 
 <img style="width:380px" src="https://adreaskar.github.io/images/iisa_1.jpg"/>
